examples/test/testpolicy7055.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7055
  namespace: namespace21
spec:
  podSelector:
    matchLabels:
      key48: value2
      key42: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value34
          key2: value34
      podSelector:
        matchLabels:
          key34: value26
